--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,9 +32,9 @@
 	<nav class="navbar navbar-light bg-light">
 	  <a class="navbar-brand" href="/">GETracker</a>
 	  	<div>
-		    <span class="navbar-text">
+		    <!-- <span class="navbar-text">
 		    	<a class ="nav-link" href = "/about"> about </a>
-		    </span>
+		    </span> -->
 		    <span class="navbar-text">
 		    	<% if (user){ %>
 					<form action = "/logout" method = POST>
