--- a/views/partials/profits.ejs
+++ b/views/partials/profits.ejs
@@ -34,13 +34,10 @@
 								+<%=profits[i].currentPricePerItem * profits[i].numInvested - profits[i].pricePerItemInvested * profits[i].numInvested%>
 							</div>
 							<div>
-								gp ea. <%=profits[i].pricePerItemInvested%> -> <%=profits[i].currentPricePerItem%>
+								gp each: <%=profits[i].pricePerItemInvested%> -> <%=profits[i].currentPricePerItem%>
 							</div>
 							<div>
-								total <%=profits[i].pricePerItemInvested * profits[i].numInvested%> -> <%=profits[i].currentPricePerItem * profits[i].numInvested%>
-							</div>
-							<div>
-								gains: <%=profits[i].currentPricePerItem * profits[i].numInvested - profits[i].pricePerItemInvested * profits[i].numInvested%>
+								total: <%=profits[i].pricePerItemInvested * profits[i].numInvested%> -> <%=profits[i].currentPricePerItem * profits[i].numInvested%>
 							</div>
 							<div>
 								invested in: <%=profits[i].dateInvested.toDateString().substring(4)%>
