--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,122 @@
 <% include ./partials/header.ejs %>
 
+
 <div class = "container-fluid">
+	<div class = "row">
+		<div class = "col-3" id = "optionContainer"> 
+			hallo
+		</div>
+		<div class = "col-6" id = "mainContainer">
+			<div class = "text-right">
+				last updated: 15h ago
+			</div>
+
+			<div class = "border-bottom">
+				top price increases
+			</div>
+			<div>
+			</div>
+
+			<div class = "border-bottom">
+				top price increases
+			</div>
+			<div>
+			</div>
+
+			<div class = "border-bottom">
+				most stable items
+			</div>	
+			<div>
+			</div>
+			
+		</div>
+		<div class = "col-3" id = "investmentContainer">
+			hallo
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class = "container-fluid">
 	<div class = "row justify-content-around">
 		<% include ./partials/profits.ejs %>
 		<div id = "featurecontainer" class = "col-8 mt-4">
@@ -311,6 +427,6 @@
 		});
 		arr = arr.reverse();
 	});
-</script>
+</script> -->
 
 <% include ./partials/footer.ejs %>
