--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,19 +31,27 @@
 <body>
 	<nav class="navbar navbar-light bg-light">
 	  <a class="navbar-brand" href="/">GETracker</a>
-	  	<div>
-		    <!-- <span class="navbar-text">
-		    	<a class ="nav-link" href = "/about"> about </a>
-		    </span> -->
-		    <span class="navbar-text">
-		    	<% if (user){ %>
-					<form action = "/logout" method = POST>
-						<button class = "btn btn-light" type = "submit"> logout </button>
-					</form>
-					<% } else {%>
-					<a class ="nav-link" href = "/login" > login </a>
-				<% }%>
-		    </span>
-		</div>
+	  <form class="form-inline">
+	    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	    <button class = "btn btn-outline-dark my-2 my-sm-0" type="submit">
+				<i class="fa fa-search"></i>
+			</button>
+		</form>
+  	<div>
+	    <span class="navbar-text">
+	    	<% if (user){ %>
+				<form action = "/logout" method = POST>
+					<button class = "btn btn-light" type = "submit"> logout </button>
+				</form>
+				<% } else {%>
+				<a class ="nav-link" href = "/login" > Login </a>
+			<% }%>
+	    </span>
+	</div>
+	</nav>
+	<nav class="navbar">
+		<a> </a>
+		<a id = "allitemlink" class = "position-relative" href = "/search"> browse all items</a>
+		<a> </a>
 	</nav>
 
