--- a/views/item.ejs
+++ b/views/item.ejs
@@ -13,12 +13,18 @@
                                     <h6 class="card-header text-center border-bottom border-dark"><%= item.name %></h6>
                                     <img class = "card-img-top" alt= "<%= item.name %>" src= "/images/big/<%=item.id%>.gif">
                                         <div class="card-body">
-                                            <p class="card-text border-bottom">"<%= item.description %>"</p>
+                                            <p class="card-text border-bottom"><i>"<%=item.description%>"</i></p>
                                             <p class = "border-bottom"> 
                                                 Item ID : <%=item.id%>
                                             </p>
                                             <p>
+                                                Item Limit: <%=item.limit%>
+                                            </p>
+                                            <p>
                                                 Members: <%=item.members ? "True" : "False"%>
+                                            </p>
+                                            <p>
+                                                <a href="https://oldschool.runescape.wiki/w/Exchange:<%=item.wikiName.split(" ").join("_")%>">Wiki Page</a>
                                             </p>
                                         </div>  
                                 </div>
@@ -27,7 +33,7 @@
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item label border-0">Current Price / Price Change</li>
                                     <li class="list-group-item">
-                                        <%=item.statdata.currentPrice.price != -1 ? item.statdata.currentPrice.price.toLocaleString() : "N/A" %> gp / <%=change != null ? (change >= 0 ? "+" : "-") + change.toLocaleString() : ""%>
+                                        <%=item.statdata.currentPrice.price != -1 ? item.statdata.currentPrice.price.toLocaleString() : "N/A" %> gp / <%=change != null ? (change >= 0 ? "+" : "") + change.toLocaleString() : ""%>
                                     </li>
                                     <li class="list-group-item label border-0">Avg. Positive / Avg. Negative Price Change</li>
                                     <li class="list-group-item">
