--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,23 @@
+	<div id = "footer" class = "container-fluid" style = "background-color:#f8f9fa ">
+		<div class = "row">
+			<div class = "col-3">
+			</div>
+			<div class = "col-2">
+				<b>About</b>
+				<div style = "font-size: 10px">
+					This website uses the OSRS Grand Exchange item API for the images of the items on the site,
+					<a href = "https://www.osrsbox.com/">OSRSBox</a> for an up to date item list / item data, 
+					and the <a href = "https://oldschool.runescape.wiki/">OSRS Wiki</a> for item data / item pricing and volume history.
+				</div>
+			</div>
+			<div class = "col-2">
+				<b>Disclaimer</b>
+				<div style = "font-size: 10px">
+					OSRS (Old School RuneScape) is a registered trademark of Jagex Limited. This website is not affiliated with or endorsed by Jagex Limited in any way.
+				</div>
+			</div>
+		</div>
+	</div>
+
 	</body>
 </html>
