--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,7 +31,7 @@
 <body>
 	<nav class="navbar navbar-light bg-light">
 	  <a class="navbar-brand" href="/">OSRS Tracker</a>
-	  <form action = "./item/search" method = "POST" class="form-inline">
+	  <form action = "/item/search" method = "POST" class="form-inline">
 			<input class = "form-control mr-sm-2" id = "searchbox" type = "search" name = "searchQuery" placeholder= "enter item name" minlength="3"required>
 			<button class = "btn btn-outline-dark my-2 my-sm-0" type="submit">
 				<i class="fa fa-search"></i>
